--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,82 @@
-altair==4.2.2
-attrs==25.3.0
-beautifulsoup4==4.13.4
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-contourpy==1.3.2
-cycler==0.12.1
-entrypoints==0.4
-Faker==37.1.0
-favicon==0.7.0
-fonttools==4.57.0
-gitdb==4.0.12
-GitPython==3.1.44
-htbuilder==0.9.0
-idna==3.10
-importlib_metadata==8.6.1
-Jinja2==3.1.6
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kiwisolver==1.4.8
-lxml==5.4.0
-Markdown==3.8
-markdown-it-py==3.0.0
-markdownlit==0.0.7
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-mdurl==0.1.2
-narwhals==1.36.0
-numpy==2.2.5
-packaging==24.2
-pandas==2.2.3
-pillow==11.2.1
-pip==25.0
-plotly==6.0.1
-prometheus_client==0.21.1
-protobuf==3.20.3
-pyarrow==19.0.1
-pydeck==0.9.1
-Pygments==2.19.1
-pymdown-extensions==10.14.3
-Pympler==1.1
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-pytz==2025.2
-PyYAML==6.0.2
-referencing==0.36.2
-requests==2.32.3
-rich==14.0.0
-rpds-py==0.24.0
-setuptools==75.8.0
-six==1.17.0
-smmap==5.0.2
-soupsieve==2.7
-st-annotated-text==4.0.2
+altair>=4.2.2
+attrs>=25.3.0
+beautifulsoup4>=4.13.4
+blinker>=1.9.0
+cachetools>=5.5.2
+certifi>=2025.1.31
+charset-normalizer>=3.4.1
+click>=8.1.8
+contourpy>=1.3.2
+cycler>=0.12.1
+entrypoints>=0.4
+Faker>=37.1.0
+favicon>=0.7.0
+fonttools>=4.57.0
+gitdb>=4.0.12
+GitPython>=3.1.44
+htbuilder>=0.9.0
+idna>=3.10
+importlib_metadata>=8.6.1
+Jinja2>=3.1.6
+jsonschema>=4.23.0
+jsonschema-specifications>=2024.10.1
+kiwisolver>=1.4.8
+lxml>=5.4.0
+Markdown>=3.8
+markdown-it-py>=3.0.0
+markdownlit>=0.0.7
+MarkupSafe>=3.0.2
+matplotlib>=3.10.1
+mdurl>=0.1.2
+narwhals>=1.36.0
+numpy>=2.2.5
+packaging>=24.2
+pandas>=2.2.3
+pillow>=11.2.1
+pip>=25.0
+plotly>=6.0.1
+prometheus_client>=0.21.1
+protobuf>=3.20.3
+python-dotenv>=1.0.0
+pyarrow>=19.0.1
+pydeck>=0.9.1
+Pygments>=2.19.1
+pymdown-extensions>=10.14.3
+Pympler>=1.1
+pyparsing>=3.2.3
+python-dateutil>=2.9.0.post0
+pytz>=2025.2
+PyYAML>=6.0.2
+referencing>=0.36.2
+requests>=2.32.3
+rich>=14.0.0
+rpds-py>=0.24.0
+scikit-learn>=1.3.2
+setuptools>=75.8.0
+six>=1.17.0
+smmap>=5.0.2
+snowflake-connector-python>=3.7.0
+soupsieve>=2.7
+st-annotated-text>=4.0.2
 st-theme==1.2.3
-streamlit==1.22.0
-streamlit-avatar==0.1.3
-streamlit-camera-input-live==0.2.0
-streamlit-card==1.0.2
-streamlit-embedcode==0.1.2
-streamlit-extras==0.6.0
-streamlit-faker==0.0.3
-streamlit-image-coordinates==0.1.9
-streamlit-keyup==0.3.0
-streamlit-toggle-switch==1.0.2
-streamlit-vertical-slider==2.5.5
-tenacity==8.5.0
-toml==0.10.2
-toolz==1.0.0
-tornado==6.4.2
-typing_extensions==4.13.2
-tzdata==2025.2
-tzlocal==5.3.1
-urllib3==2.4.0
-validators==0.34.0
-wheel==0.45.1
-zipp==3.21.0
+streamlit>=1.33.0
+streamlit-avatar>=0.1.3
+streamlit-camera-input-live>=0.2.0
+streamlit-card>=1.0.2
+streamlit-embedcode>=0.1.2
+streamlit-faker>=0.0.3
+streamlit-image-coordinates>=0.1.9
+streamlit-keyup>=0.3.0
+streamlit-toggle-switch>=1.0.2
+streamlit-vertical-slider>=2.5.5
+tenacity>=8.5.0
+toml>=0.10.2
+toolz>=1.0.0
+tornado>=6.4.2
+typing_extensions>=4.13.2
+tzdata>=2025.2
+tzlocal>=5.3.1
+urllib3>=2.4.0
+validators>=0.34.0
+wheel>=0.45.1
+zipp>=3.21.0
